# Beacon

./: .dockerignore  .gitignore  AI_FINAL_CONFIG.md  AI_OPTIMIZATION.md  AI_SERVICE_CONFIG.md  BEACON_PLUS.md  BIGGEST_UPDATE.md  BUILD.md  BUILD_GUIDE_v1.0.md  CHANGELOG.md  CLAWCLOUD_CONFIG.md  CLAW_CLOUD_STRATEGY.md  CLAW_CLOUD_TUTORIAL.md  CLAW_RAILWAY_SETUP.md  COMPLETE.md  COMPLETE_FEATURES.md  COMPLETE_READY.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_TUTORIAL.md  DEPLOY_NOW.md  DOCKER_AI_GUIDE.md  Dockerfile  Dockerfile.clawcloud  Dockerfile.railway  ENHANCEMENTS.md  FEATURES.md  FINAL_BUILD.md  FINAL_CHECKLIST.md  HOSTING_TUTORIAL.md  ICON_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_COMPLETE.md  LAUNCH_CHECKLIST.md  LICENSE  MULTI_SERVICE_DEPLOYMENT.md  ORIGINAL-PLAN.MD  (+48 more)
.VSCodeCounter/2026-03-25_19-13-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: clawcloud-docker.yml  deploy-clawcloudrun.yml  deploy-cloud-run.yml  deploy-railway.yml  deploy.yml  docker-build.yml  docker-publish.yml  npm-publish.yml  sdk-publish.yml
apps/desktop/: package.json
apps/desktop/src/: index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  performance.rs
apps/mobile/: capacitor.config.ts  package.json
apps/mobile/scripts/: ensureAndroidSdk.js
apps/mobile/src/: index.ts
apps/server/: .env.example  .gitignore  CLAWCLOUD_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ai  Dockerfile.ai-lite  Dockerfile.clawcloud  Dockerfile.optimized  Dockerfile.railway  FREE_DEPLOYMENT.md  OPTIMIZED_DEPLOYMENT.md  RAILWAY_GUIDE.md  README.md  REBUILD_SUMMARY.md  clawcloud.yaml  package-lock.json  package.json  prisma_error.txt  railway.json  server-azure.js  server-clawcloud.js  server-railway.js  server-render.js  test_dotenv.js  test_native.cjs  test_pem.js  tsconfig.json  wipe_buckets.ts
apps/server/ai/: .dockerignore  Dockerfile  Dockerfile.clawcloud  build-clawcloud.bat  build-clawcloud.sh  clawcloud-ai.yaml  clawcloud_service.py  decision_engine.pl  download_model.py  fine_tune.py  index.ts  model_runner.py  moderation.pl  moderation_balanced.pl  moderation_engine.pl  requirements.txt  start.sh  video_processor.ts
apps/server/config/: coupon-codes.json  developers.json  promo-codes.json  redeem-codes.json
apps/server/native/: CMakeLists.txt  package-lock.json  package.json
apps/server/native/proto/: message.proto
apps/server/native/src/: index.cc
apps/server/prisma/: schema.prisma  seed-quests.js
apps/server/scripts/: init-system-bot.ts  prisma-generate-retry.cjs
apps/server/src/: ai-server-lite.ts  ai-server.ts  api-server.ts  env.ts  index.ts  render-server.ts  test-email.ts  test-firebase.ts  test-smtp.ts  types.d.ts  types.ts  ws-server.ts
apps/server/tests/: health.test.js  reactions-api.test.js
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  ts_check.txt  tsc_output.txt  tsconfig.json  vite.config.ts
deploy/: Dockerfile  package.json  tsconfig.json
deploy/ai/: video_processor.d.ts  video_processor.js  video_processor.ts
deploy/prisma/: schema.prisma
deploy/src/: index.ts
functions/media/: [[path]].ts
functions/mod/: [[path]].ts
k8s/: clawcloud-ai-sms.yaml
scripts/: build-android.ps1  build-desktop.ps1  cleanup-server.ps1  commit-and-push.bat  deploy-clawcloudrun.sh  deploy-railway-optimized.sh  deploy-railway.bat  deploy-railway.sh  deploy-server.ps1  fix-ide-problems.bat  health-check.sh  publish-sdk.sh  publish-sdk.ts  setup-clawcloud-bridge.sh  setup-production.sh  setup-server.sh  test-server.bat
tmp/: audit_dms.ts  test_expiry.ts
(+670 files in other folders)
